block commit for node_modules

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 
 backend/config/secrets.js
-
+backend/node_modules/
 backend/config/secrets_sample.js
-
+frontend/node_modules/
 backend/config/secrets_sample.js
